# magnificence-oxidized-chess

./: .gitignore  BENCHMARK.sh  BUILD_PGO_RELEASE.sh  Cargo.toml  GENERATE_FLAMEGRAPH.sh  README.md  TOURNAMENT.sh
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  uci.rs
core/: Cargo.toml
core/src/: commands.rs  core.rs  engine.rs  lib.rs
core/src/core/: bitboard.rs  move_list.rs  tests.rs
core/src/core/bitboard/: constants.rs  evaluation.rs  formatting.rs  helpers.rs  move_gen.rs  see.rs
core/src/core/bitboard/move_gen/: bishops.rs  castling.rs  kings.rs  knights.rs  pawns.rs  rooks.rs
core/src/engine/: ab_engine.rs  move_sorting.rs  pv.rs  random_engine.rs
src/: core.rs  main.rs  uci.rs
src/core/: bitboard.rs  mod.rs  tests.rs
src/core/board/: mod.rs
src/engine/: ab_engine.rs  mod.rs
src/uci/: mod.rs
web/: Cargo.toml
web/site/: .gitignore  BUILD.sh  index.html  package-lock.json  package.json  rsw.toml  tailwind.config.js  tsconfig.json  vite.config.ts
web/site/src/: App.vue  callbacks.js  main.ts  style.css  worker.js
web/site/src/components/: Board.vue  BottomControls.vue  EngineInfo.vue  GameControls.vue  GameEndPopup.vue  Header.vue  HelloWasm.vue  PlayerInfo.vue  PopupDialog.vue  TopControls.vue
web/site/src/store/: engine.ts  store.ts  ui.ts
web/src/: lib.rs
