[package]
name = "magnificence-oxidized-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
engine_core = { path = "../core" }
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
serde = "1.0.204"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"